--- a/app/otherProjects/cal-style.scss
+++ b/app/otherProjects/cal-style.scss
@@ -1,11 +1,9 @@
-* {
+div, body, p, html, span, a, input, textarea {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
-
 
 html, body{
   font-family: Arial;
@@ -17,11 +15,12 @@ body{
 }
 
 #app {
-  width: 100%;
+  width: 50%;
   height: 100%;
   border: 1px solid #e1e1e1; 
   position: relative;
   background: white;
+  margin: 0 auto;
 }
 
 
@@ -68,10 +67,39 @@ body{
 }
 
 .cal-event{
-  width: 150px;
+  touch-action: none;
+  user-select: none;
+  -webkit-user-drag: none;
+  width: 90%;
   background-color: rgb(253, 241, 186);
   border:solid 1px rgb(227, 188, 8);
   border-radius: 5px;
   position: absolute;
   cursor: move;
+  padding: 5px;
+  font-size: 11px;
+
+  span{
+    display: block;
+    width: 100%;
+    height: auto;
+    
+    &.title{
+      font-weight: bold;
+    }
+  }
+
+  textarea{
+    border: none;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    background: transparent;
+    font-weight: 400;
+  }
+
+  textarea{
+    resize: none;
+    font-size: 11px;
+  }
 }
