--- a/app/otherProjects/cal-style.scss
+++ b/app/otherProjects/cal-style.scss
@@ -15,9 +15,9 @@ body{
 }
 
 #app {
-  width: 50%;
+  width: 100%;
   height: 100%;
-  border: 1px solid #e1e1e1; 
+  border: 1px solid #CCC; 
   position: relative;
   background: white;
   margin: 0 auto;
@@ -70,7 +70,7 @@ body{
   touch-action: none;
   user-select: none;
   -webkit-user-drag: none;
-  width: 90%;
+  width: 93%;
   background-color: rgb(253, 241, 186);
   border:solid 1px rgb(227, 188, 8);
   border-radius: 5px;
@@ -101,5 +101,18 @@ body{
   textarea{
     resize: none;
     font-size: 11px;
+  }
+
+  .trash{
+    display: inline-block;
+    width: auto;
+    height: auto;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    outline: none;
   }
 }
